Version 2.6.13 - 2014-08-03
* Bug fixes (see mercurial logs for details)

Version 2.6.12 - 2014-07-01
* Bug fixes (see mercurial logs for details)

Version 2.6.11 - 2014-04-07
* Bug fixes (see mercurial logs for details)

Version 2.6.10 - 2014-03-22
* Bug fixes (see mercurial logs for details)

Version 2.6.9 - 2014-01-18
* Bug fixes (see mercurial logs for details)

Version 2.6.8 - 2013-12-04
* Bug fixes (see mercurial logs for details)

Version 2.6.7 - 2013-10-01
* Bug fixes (see mercurial logs for details)

Version 2.6.6 - 2013-07-22
* Bug fixes (see mercurial logs for details)

Version 2.6.5 - 2013-06-09
* Bug fixes (see mercurial logs for details)

Version 2.6.4 - 2013-05-02
* Bug fixes (see mercurial logs for details)

Version 2.6.3 - 2013-02-12
* Bug fixes (see mercurial logs for details)

Version 2.6.2 - 2012-12-23
* Bug fixes (see mercurial logs for details)

Version 2.6.1 - 2012-11-05
* Bug fixes (see mercurial logs for details)

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)
* Add pre-validation
* Allow to use XML file for views
* Add RPC definition
* Repace BrowseRecord by Model instance
* Replace Cache decorator by a simple LRU Cache
* Remove Cacheable
* Remove _description
* Rename _name by __name__
* Use class in Pool
* Fix search button clause in ModelButton.get_groups (CVE-2012-2238)
* Merge all kind of buttons
* Use XML id for board action instead of id
* Add states attribute to notebook
* Allow to use tuple for Reference
* Add constant interpolation on line graph
* Add create/delete field access
* Add dynamic size limit on the One2Many, Many2Many and Char
* Replace __tryton__.py by tryton.cfg
* Allow to use Reference field in One2Many & Many2Many
* Remove hexmd5 from ModelView.fields_view_get
* Allow client to manage model access
* Add time format validation
* Remove ModelSQL.default_sequence

Version 2.4.0 - 2012-04-23
* Bug fixes (see mercurial logs for details)